; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-stm32-qspi.c_stm32_qspi_wait_nobusy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-stm32-qspi.c_stm32_qspi_wait_nobusy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm32_qspi = type { i64 }

@QSPI_SR = common dso_local global i64 0, align 8
@SR_BUSY = common dso_local global i32 0, align 4
@STM32_BUSY_TIMEOUT_US = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stm32_qspi*)* @stm32_qspi_wait_nobusy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stm32_qspi_wait_nobusy(%struct.stm32_qspi* %0) #0 {
  %2 = alloca %struct.stm32_qspi*, align 8
  %3 = alloca i32, align 4
  store %struct.stm32_qspi* %0, %struct.stm32_qspi** %2, align 8
  %4 = load %struct.stm32_qspi*, %struct.stm32_qspi** %2, align 8
  %5 = getelementptr inbounds %struct.stm32_qspi, %struct.stm32_qspi* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @QSPI_SR, align 8
  %8 = add nsw i64 %6, %7
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @SR_BUSY, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = load i32, i32* @STM32_BUSY_TIMEOUT_US, align 4
  %17 = call i32 @readl_relaxed_poll_timeout_atomic(i64 %8, i32 %9, i32 %15, i32 1, i32 %16)
  ret i32 %17
}

declare dso_local i32 @readl_relaxed_poll_timeout_atomic(i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
